--- a/index.html
+++ b/index.html
@@ -4,31 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Affroun Online | العفرون أونلاين</title>
+    <!-- أيقونات FontAwesome أحدث إصدار -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!-- واجهة المستخدم العادية -->
+    <!-- واجهة المستخدم -->
     <div id="main-app">
         <!-- الهيدر -->
         <header>
             <div class="header-container">
                 <div class="menu-logo">
-                    <i class="fas fa-bars" id="menu-btn"></i>
+                    <i class="fas fa-bars icon-hover" id="menu-btn"></i>
                     <h1 class="logo">العفرون<span>أونلاين</span></h1>
                 </div>
                 <div class="header-actions">
-                    <button id="lang-toggle">FR</button>
-                    <i class="fas fa-envelope" id="messages-icon" style="display:none;"></i>
-                    <button class="btn-login" id="header-login-btn" data-i18n="login">تسجيل الدخول</button>
+                    <button id="lang-toggle" class="btn-icon">FR</button>
+                    <i class="fas fa-comment-dots icon-hover" id="messages-icon" style="display:none;" title="الرسائل"></i>
+                    <button class="btn-modern btn-primary" id="header-login-btn">
+                        <i class="fas fa-user"></i> <span data-i18n="login">تسجيل الدخول</span>
+                    </button>
                 </div>
             </div>
         </header>
 
         <!-- القائمة الجانبية -->
         <nav id="sidebar" class="sidebar">
-            <i class="fas fa-times" id="close-sidebar"></i>
+            <i class="fas fa-times icon-hover" id="close-sidebar"></i>
             <ul class="sidebar-links">
                 <li data-i18n="home"><i class="fas fa-home"></i> الرئيسية</li>
                 <li data-i18n="privacy"><i class="fas fa-shield-alt"></i> سياسة الخصوصية</li>
@@ -40,69 +43,66 @@
 
         <!-- سلايدر الإعلانات -->
         <section class="banner-slider">
-            <div class="slide" style="background-image: url('https://via.placeholder.com/1200x300?text=إعلان+بانر');"></div>
+            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1557821552-17105176677c?auto=format&fit=crop&w=1200&q=80');">
+                <div class="slide-content">
+                    <h2>مرحباً بكم في العفرون أونلاين</h2>
+                    <p>الموقع الأول للإعلانات المبوبة في المنطقة</p>
+                </div>
+            </div>
         </section>
 
-        <!-- الفئات (دوائر) -->
+        <!-- الفئات -->
         <section class="categories-container">
             <div class="categories-scroll" id="categories-list">
-                <!-- سيتم توليدها بواسطة JS -->
+                <!-- تولد بواسطة JS -->
             </div>
         </section>
 
         <!-- الإعلانات المميزة -->
         <section class="ads-section">
-            <h2 class="section-title"><i class="fas fa-star" style="color: gold;"></i> <span data-i18n="featured_ads">إعلانات مميزة</span></h2>
+            <h2 class="section-title"><i class="fas fa-star" style="color: #FFD700; text-shadow: 0 0 5px rgba(255,215,0,0.5);"></i> <span data-i18n="featured_ads">إعلانات مميزة</span></h2>
             <div class="ads-grid" id="featured-ads"></div>
         </section>
 
         <!-- جميع الإعلانات -->
         <section class="ads-section">
-            <h2 class="section-title" data-i18n="all_ads">جميع الإعلانات</h2>
+            <h2 class="section-title" data-i18n="all_ads"><i class="fas fa-list"></i> جميع الإعلانات</h2>
             <div class="ads-grid" id="all-ads"></div>
         </section>
 
-        <!-- الأزرار العائمة -->
+        <!-- الأزرار العائمة (أقل وضوح وتتضح عند اللمس) -->
         <div class="fab-container">
-            <button class="fab" id="fab-filter" title="فلترة"><i class="fas fa-filter"></i></button>
-            <button class="fab" id="fab-add" title="نشر إعلان"><i class="fas fa-plus"></i></button>
+            <button class="fab fab-secondary" id="fab-filter" title="فلترة البحث"><i class="fas fa-filter"></i></button>
+            <button class="fab fab-primary" id="fab-add" title="نشر إعلان"><i class="fas fa-plus"></i></button>
         </div>
 
-        <!-- الفوتر -->
         <footer>
-            <p>&copy; 2026 El Affroun Online. All rights reserved.</p>
-            <span id="admin-secret-login" style="cursor: pointer; opacity: 0.5;">🔒</span>
+            <p>&copy; 2026 El Affroun Online.</p>
         </footer>
+        
+        <!-- قفل دخول الأدمن (مخفي بذكاء في الزاوية السفلية) -->
+        <span id="admin-secret-login" title="">🔒</span>
     </div>
 
-    <!-- لوحة تحكم الأدمن (مخفية افتراضيا) -->
+    <!-- لوحة تحكم الإدارة (مخفية) -->
     <div id="admin-dashboard" style="display: none;">
         <header class="admin-header">
-            <h2>لوحة تحكم الإدارة</h2>
-            <button id="admin-logout" class="btn-danger">خروج</button>
+            <h2><i class="fas fa-user-shield"></i> لوحة الإدارة</h2>
+            <button id="admin-logout" class="btn-modern btn-danger"><i class="fas fa-sign-out-alt"></i> خروج</button>
         </header>
         <div class="dashboard-stats">
-            <div class="stat-card" style="background: #3498db;"><h3>زيارات اليوم</h3><p>150</p></div>
-            <div class="stat-card" style="background: #2ecc71;"><h3>زيارات الشهر</h3><p>4,200</p></div>
-            <div class="stat-card" style="background: #f1c40f;"><h3>منشورات جديدة</h3><p>25</p></div>
-            <div class="stat-card" style="background: #e74c3c;"><h3>المستخدمين</h3><p>850</p></div>
-        </div>
-        <!-- أزرار الإدارة -->
-        <div class="admin-controls">
-            <button class="btn-admin">إدارة الإعلانات</button>
-            <button class="btn-admin">إدارة المستخدمين</button>
-            <button class="btn-admin">إدارة البانر (Slider)</button>
-            <button class="btn-admin">إعدادات الموقع</button>
-            <button class="btn-admin">التقارير والمشاكل</button>
+            <div class="stat-card" style="background: linear-gradient(135deg, #3498db, #2980b9);"><h3>الزيارات اليوم</h3><p>150</p></div>
+            <div class="stat-card" style="background: linear-gradient(135deg, #2ecc71, #27ae60);"><h3>زيارات الشهر</h3><p>4,200</p></div>
+            <div class="stat-card" style="background: linear-gradient(135deg, #f1c40f, #f39c12);"><h3>منشورات جديدة</h3><p>25</p></div>
+            <div class="stat-card" style="background: linear-gradient(135deg, #e74c3c, #c0392b);"><h3>المستخدمين</h3><p>850</p></div>
         </div>
     </div>
 
-    <!-- النوافذ المنبثقة (Modals) -->
-    <!-- 1. نشر إعلان -->
+    <!-- نافذة النشر -->
     <div class="modal" id="add-ad-modal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
-            <h2 data-i18n="publish_ad">نشر إعلان جديد</h2>
+            <h2 data-i18n="publish_ad"><i class="fas fa-bullhorn"></i> نشر إعلان جديد</h2>
             <form id="add-ad-form">
                 <input type="text" id="ad-title" placeholder="اسم المنتج أو الخدمة" required>
                 <textarea id="ad-desc" placeholder="الوصف" required></textarea>
@@ -123,24 +123,29 @@
                     <option value="أحمر العين">أحمر العين</option>
                 </select>
                 <input type="file" id="ad-image" accept="image/*">
-                <button type="submit" class="btn-primary" data-i18n="publish">نشر الإعلان</button>
+                <!-- زر Submit يتم إيقاف التحديث الخاص به في JS -->
+                <button type="submit" class="btn-modern btn-primary"><i class="fas fa-paper-plane"></i> <span data-i18n="publish">نشر الإعلان</span></button>
             </form>
         </div>
     </div>
 
-    <!-- 2. تسجيل الدخول -->
+    <!-- نافذة الدخول -->
     <div class="modal" id="login-modal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
-            <h2>تسجيل الدخول / إنشاء حساب</h2>
-            <input type="email" id="auth-email" placeholder="البريد الإلكتروني">
-            <input type="password" id="auth-pass" placeholder="كلمة المرور">
-            <button id="btn-login-submit" class="btn-primary">دخول</button>
-            <button id="btn-register-submit" class="btn-secondary">إنشاء حساب جديد</button>
+            <h2><i class="fas fa-user-circle"></i> تسجيل الدخول / حساب جديد</h2>
+            <form id="login-form">
+                <input type="email" id="auth-email" placeholder="البريد الإلكتروني" required>
+                <input type="password" id="auth-pass" placeholder="كلمة المرور" required>
+                <div style="display: flex; gap: 10px; margin-top: 15px;">
+                    <!-- تمت إضافة type="submit" و type="button" لمنع التداخل وتحديث الصفحة -->
+                    <button type="submit" id="btn-login-submit" class="btn-modern btn-primary" style="flex: 1;"><i class="fas fa-sign-in-alt"></i> دخول</button>
+                    <button type="button" id="btn-register-submit" class="btn-modern btn-secondary" style="flex: 1;"><i class="fas fa-user-plus"></i> إنشاء حساب</button>
+                </div>
+            </form>
         </div>
     </div>
 
-    <!-- استدعاء الجافاسكريبت -->
     <script type="module" src="app.js"></script>
 </body>
 </html>
